--- a/app/src/main/res/layout/activity_usuarios_admins.xml
+++ b/app/src/main/res/layout/activity_usuarios_admins.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UsuariosAdmins"
-    android:background="@mipmap/fondoagenda">
+    android:background="@mipmap/fondoagenda"
+    tools:context=".UsuariosAdmins">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/toolbar"
