--- a/app/src/main/res/layout/content_contacto_scroll.xml
+++ b/app/src/main/res/layout/content_contacto_scroll.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView
+    android:id="@+id/content_contacto_scroll"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ScrollActivity"
-    tools:showIn="@layout/activity_scroll">
+    tools:context=".ScrollContactoActivity"
+    tools:showIn="@layout/activity_scroll_contacto">
 
 </androidx.core.widget.NestedScrollView>
