--- a/app/src/main/res/layout/spinner_item_tipo_usuario.xml
+++ b/app/src/main/res/layout/spinner_item_tipo_usuario.xml
@@ -5,4 +5,4 @@
     android:layout_height="wrap_content"
     android:textSize="18sp"
     android:padding="10sp"
-    android:textColor="@android:color/white"/>
+    android:textColor="@android:color/black"/>
